Fixed width issues on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -407,7 +407,7 @@ body {
   }
 
   .mobile-awards-carousel {
-    padding: 4%;
+    padding: 0;
     display: block;
   }
 
