--- a/resources/assets/sass/_home.scss
+++ b/resources/assets/sass/_home.scss
@@ -27,7 +27,7 @@ body {
   }
 
   .mobile-awards-carousel {
-    padding: 4%;
+    padding: 0;
     display: block;
   }
 
